--- a/style.css
+++ b/style.css
@@ -12,7 +12,9 @@ html {
 }
 
 body {
-    background-color: #333;
+    background-image: url(./images/bg.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -27,6 +29,7 @@ body {
     padding: 3rem;
     border-radius: 15px;
     gap: 1rem;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
 .search-city {
@@ -152,7 +155,7 @@ body {
 footer {
     position: fixed;
     bottom: 0;
-    background-color: #5b548a;
+    background-color: #333;
     width: 100%;
     display: flex;
     align-items: center;
